--- a/sass/includes/_footer.sass
+++ b/sass/includes/_footer.sass
@@ -59,9 +59,12 @@
     letter-spacing: 1px
     text-align: center
 
-    a
-      color: transparentize($footer-text, 0.4)
+    p
+      display: inline-block
 
-      &:hover
-        color: opacify($footer-text, 0.2)
-        text-decoration: none
+      a
+        color: transparentize($footer-text, 0.4)
+
+        &:hover
+          color: opacify($footer-text, 0.2)
+          text-decoration: none
